# hello_world_project

./: .dockerignore  .env.dev  .env.prod  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.test.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build-and-publish.yml  cd.yml  ci.yml  sast.yml
devops/: .env.dev  .env.prod  .env.test  DEVOPS.md  Dockerfile  Dockerfile.prod  Dockerfile.test  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
devops/scripts/: boilerplate.sh  dev-clean.sh  manage.py  seed_db.py  startup.sh  test.sh  version.py  wait_for_db.py
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
docs/: CONTRIBUTING.md  Hello_World_API.postman_collection.json  Hello_World_API.postman_environment.json  README.md  STYLE.md  architecture.md  deployment_guide.md  development.md  evolution_guide.md  readme.md  structure.md
docs/api/: FastAPI_Project.postman_collection.json  FastAPI_Project.postman_environment.json  endpoints.md
migrations/: .flake8  env.py  script.py.mako
migrations/versions/: 62af5c82d8c9_initial.py
scripts/: boilerplate.sh  generate_docs.sh  init_db.py  init_dev.sh  seed_db.py  start.sh  startup.sh  test.sh  wait_for_db.py
src/: main.py
src/core/: config.py  error_handlers.py  exceptions.py  security.py  token_manager.py
src/db/: session.py  (+1 more)
tests/: conftest.py
(+29 files in other folders)
